# carreralib

./: .gitignore  .travis.yml  CHANGELOG.rst  CHANGES.rst  LICENSE  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
carreralib/: __init__.py  __main__.py  bluepy.py  connection.py  cu.py  fw.py  protocol.py  serial.py
docs/: Makefile  conf.py  index.rst
src/carreralib/: __init__.py  __main__.py  ble.py  bluepy.py  connection.py  cu.py  fw.py  protocol.py  serial.py
tests/: test_protocol.py
