[metadata]
name = carreralib
version = attr: carreralib.__version__
url = https://github.com/tkem/carreralib/
author = Thomas Kemmer
author_email = tkemmer@computer.org
license = MIT
license_file = LICENSE
description = Python interface to Carrera(R) DIGITAL 124/132 slotcar systems
long_description = file: README.rst
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules


[options]
package_dir =
    = src
packages = find:
install_requires =
    bleak >= 0.19.5
    pyserial >= 3.5
    windows-curses; platform_system=="Windows"
python_requires = ~= 3.7

[options.packages.find]
where = src

[flake8]
max-line-length = 80
exclude = .git, .tox, build
select = C, E, F, W, B, B950, I, N
# B008: function calls in argument defaults
# E203: whitespace before ':' (black)
# E501: line too long (black)
ignore = B008, E203, E501

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1
